// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComponentCallGraphsView when a call graph's node has a different number of tags to the selected node the call graph is not shown for the selected node 1`] = `
"<div callgraphs=\\"\\">
  <transition-stub name=\\"\\" css=\\"true\\" enterclass=\\"\\" leaveclass=\\"show\\" entertoclass=\\"show\\" leavetoclass=\\"\\" enteractiveclass=\\"\\" leaveactiveclass=\\"\\" class=\\"my-3\\">
    <div role=\\"alert\\" aria-live=\\"polite\\" aria-atomic=\\"true\\" class=\\"alert alert-dismissible alert-info\\"><button type=\\"button\\" aria-label=\\"Close\\" class=\\"close\\">×</button>
      <p>
        The call graphs on this page come from a combination of Zipkin traces.
        The visualisation is not out-of-the-box Zipkin functionality and is
        bespoke to Kronicle.
      </p>
      <p class=\\"mb-0\\">
        A maximum of 20 call graphs are displayed on this
        page at any one time.
      </p>
    </div>
  </transition-stub>
  <!---->
  <div class=\\"call-graphs\\">
    <div class=\\"call-graph my-2\\">
      <h5>
        Call Graph 1
        <span class=\\"badge ml-2 badge-primary\\">
          1 Traces
        </span></h5> <svg xmlns=\\"http://www.w3.org/2000/svg\\" overflow=\\"auto\\" width=\\"100%\\" height=\\"1200\\">
        <rect fill-opacity=\\"0\\" class=\\"graph-background\\"></rect>
        <defs>
          <marker id=\\"graph-all-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker all-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-other-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker other-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-scope-related-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker scope-related-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-scoped-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker scoped-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-related-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker related-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-direct-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker direct-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-selected-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker selected-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
        </defs>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g>
          <path id=\\"graph-edge-0\\" d=\\"M50,66L50,234\\" marker-end=\\"url(#graph-direct-edge-marker)\\" class=\\"edge direct-edge\\"></path>
        </g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g>
          <circle id=\\"graph-node-1\\" r=\\"16\\" cx=\\"50\\" cy=\\"250\\" title=\\"test-component-id-2\\" class=\\"node direct-node\\"></circle>
        </g>
        <g>
          <circle id=\\"graph-node-0\\" r=\\"16\\" cx=\\"50\\" cy=\\"50\\" title=\\"test-component-id-1\\" class=\\"node selected-node\\"></circle>
        </g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g><text x=\\"73\\" y=\\"270\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label direct-node-label\\">
            <tspan x=\\"73\\" y=\\"270\\">
              test-component-id-2
            </tspan>
          </text></g>
        <g><text x=\\"73\\" y=\\"70\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label selected-node-label\\">
            <tspan x=\\"73\\" y=\\"70\\">
              test-component-id-1
            </tspan>
          </text></g>
      </svg>
    </div>
  </div>
  <div class=\\"nodes\\">
    <h4>Component Nodes</h4> <button type=\\"button\\" class=\\"btn node my-1 btn-success btn-block\\">

      <ul>
        <li>
          testName1: test-value-1
        </li>
      </ul>
    </button><button type=\\"button\\" class=\\"btn node my-1 btn-secondary btn-block\\">

      <ul>
        <li>
          testName1: test-value-1
        </li>
        <li>
          testName2: test-value-2
        </li>
      </ul>
    </button>
  </div>
</div>"
`;

exports[`ComponentCallGraphsView when a call graph's node has the same number of tags to the selected node but different values the call graph is not shown for the selected node 1`] = `
"<div callgraphs=\\"\\">
  <transition-stub name=\\"\\" css=\\"true\\" enterclass=\\"\\" leaveclass=\\"show\\" entertoclass=\\"show\\" leavetoclass=\\"\\" enteractiveclass=\\"\\" leaveactiveclass=\\"\\" class=\\"my-3\\">
    <div role=\\"alert\\" aria-live=\\"polite\\" aria-atomic=\\"true\\" class=\\"alert alert-dismissible alert-info\\"><button type=\\"button\\" aria-label=\\"Close\\" class=\\"close\\">×</button>
      <p>
        The call graphs on this page come from a combination of Zipkin traces.
        The visualisation is not out-of-the-box Zipkin functionality and is
        bespoke to Kronicle.
      </p>
      <p class=\\"mb-0\\">
        A maximum of 20 call graphs are displayed on this
        page at any one time.
      </p>
    </div>
  </transition-stub>
  <!---->
  <div class=\\"call-graphs\\">
    <div class=\\"call-graph my-2\\">
      <h5>
        Call Graph 1
        <span class=\\"badge ml-2 badge-primary\\">
          1 Traces
        </span></h5> <svg xmlns=\\"http://www.w3.org/2000/svg\\" overflow=\\"auto\\" width=\\"100%\\" height=\\"1200\\">
        <rect fill-opacity=\\"0\\" class=\\"graph-background\\"></rect>
        <defs>
          <marker id=\\"graph-all-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker all-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-other-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker other-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-scope-related-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker scope-related-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-scoped-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker scoped-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-related-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker related-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-direct-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker direct-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-selected-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker selected-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
        </defs>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g>
          <path id=\\"graph-edge-0\\" d=\\"M50,66L50,234\\" marker-end=\\"url(#graph-direct-edge-marker)\\" class=\\"edge direct-edge\\"></path>
        </g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g>
          <circle id=\\"graph-node-1\\" r=\\"16\\" cx=\\"50\\" cy=\\"250\\" title=\\"test-component-id-2\\" class=\\"node direct-node\\"></circle>
        </g>
        <g>
          <circle id=\\"graph-node-0\\" r=\\"16\\" cx=\\"50\\" cy=\\"50\\" title=\\"test-component-id-1\\" class=\\"node selected-node\\"></circle>
        </g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g><text x=\\"73\\" y=\\"270\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label direct-node-label\\">
            <tspan x=\\"73\\" y=\\"270\\">
              test-component-id-2
            </tspan>
          </text></g>
        <g><text x=\\"73\\" y=\\"70\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label selected-node-label\\">
            <tspan x=\\"73\\" y=\\"70\\">
              test-component-id-1
            </tspan>
          </text></g>
      </svg>
    </div>
    <div class=\\"call-graph my-2\\">
      <h5>
        Call Graph 2
        <span class=\\"badge ml-2 badge-primary\\">
          1 Traces
        </span></h5> <svg xmlns=\\"http://www.w3.org/2000/svg\\" overflow=\\"auto\\" width=\\"100%\\" height=\\"1200\\">
        <rect fill-opacity=\\"0\\" class=\\"graph-background\\"></rect>
        <defs>
          <marker id=\\"graph-all-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker all-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-other-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker other-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-scope-related-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker scope-related-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-scoped-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker scoped-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-related-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker related-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-direct-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker direct-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-selected-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker selected-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
        </defs>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g>
          <path id=\\"graph-edge-0\\" d=\\"M50,66L50,234\\" marker-end=\\"url(#graph-direct-edge-marker)\\" class=\\"edge direct-edge\\"></path>
        </g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g>
          <circle id=\\"graph-node-1\\" r=\\"16\\" cx=\\"50\\" cy=\\"250\\" title=\\"test-component-id-2\\" class=\\"node direct-node\\"></circle>
        </g>
        <g>
          <circle id=\\"graph-node-0\\" r=\\"16\\" cx=\\"50\\" cy=\\"50\\" title=\\"test-component-id-1\\" class=\\"node selected-node\\"></circle>
        </g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g><text x=\\"73\\" y=\\"270\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label direct-node-label\\">
            <tspan x=\\"73\\" y=\\"270\\">
              test-component-id-2
            </tspan>
          </text></g>
        <g><text x=\\"73\\" y=\\"70\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label selected-node-label\\">
            <tspan x=\\"73\\" y=\\"70\\">
              test-component-id-1
            </tspan>
          </text></g>
      </svg>
    </div>
  </div>
  <div class=\\"nodes\\">
    <h4>Component Nodes</h4> <button type=\\"button\\" class=\\"btn node my-1 btn-success btn-block\\">

      <ul>
        <li>
          testName1: test-value-1
        </li>
        <li>
          testName2: test-value-2
        </li>
      </ul>
    </button>
  </div>
</div>"
`;

exports[`ComponentCallGraphsView when diagrams prop is set to an empty array renders a message saying there are no call graphs available 1`] = `
"<div callgraphs=\\"\\">
  <transition-stub name=\\"\\" css=\\"true\\" enterclass=\\"\\" leaveclass=\\"show\\" entertoclass=\\"show\\" leavetoclass=\\"\\" enteractiveclass=\\"\\" leaveactiveclass=\\"\\" class=\\"my-3\\">
    <div role=\\"alert\\" aria-live=\\"polite\\" aria-atomic=\\"true\\" class=\\"alert alert-dismissible alert-info\\"><button type=\\"button\\" aria-label=\\"Close\\" class=\\"close\\">×</button>
      <p>
        The call graphs on this page come from a combination of Zipkin traces.
        The visualisation is not out-of-the-box Zipkin functionality and is
        bespoke to Kronicle.
      </p>
      <p class=\\"mb-0\\">
        A maximum of 20 call graphs are displayed on this
        page at any one time.
      </p>
    </div>
  </transition-stub>
  <div>
    <transition-stub name=\\"\\" css=\\"true\\" enterclass=\\"\\" leaveclass=\\"show\\" entertoclass=\\"show\\" leavetoclass=\\"\\" enteractiveclass=\\"\\" leaveactiveclass=\\"\\" class=\\"my-3\\">
      <div role=\\"alert\\" aria-live=\\"polite\\" aria-atomic=\\"true\\" class=\\"alert alert-warning\\">
        <!---->
        No call graphs are available for this component. Possibly:

        <ol>
          <li>The component is not integrated with Zipkin yet or</li>
          <li>
            Kronicle may have restarted recently and not have loaded Zipkin data
            yet
          </li>
        </ol>
      </div>
    </transition-stub>
  </div>
  <div class=\\"call-graphs\\"></div>
  <div class=\\"nodes\\">
    <h4>Component Nodes</h4>
  </div>
</div>"
`;

exports[`ComponentCallGraphsView when there are 2 nodes and the first node has 1 call graph and the second node has 2 call graphs renders the page with 1 call graph on the left and 2 nodes on the right and the first node should be selected 1`] = `
"<div callgraphs=\\"\\">
  <transition-stub name=\\"\\" css=\\"true\\" enterclass=\\"\\" leaveclass=\\"show\\" entertoclass=\\"show\\" leavetoclass=\\"\\" enteractiveclass=\\"\\" leaveactiveclass=\\"\\" class=\\"my-3\\">
    <div role=\\"alert\\" aria-live=\\"polite\\" aria-atomic=\\"true\\" class=\\"alert alert-dismissible alert-info\\"><button type=\\"button\\" aria-label=\\"Close\\" class=\\"close\\">×</button>
      <p>
        The call graphs on this page come from a combination of Zipkin traces.
        The visualisation is not out-of-the-box Zipkin functionality and is
        bespoke to Kronicle.
      </p>
      <p class=\\"mb-0\\">
        A maximum of 20 call graphs are displayed on this
        page at any one time.
      </p>
    </div>
  </transition-stub>
  <!---->
  <div class=\\"call-graphs\\">
    <div class=\\"call-graph my-2\\">
      <h5>
        Call Graph 1
        <span class=\\"badge ml-2 badge-primary\\">
          1 Traces
        </span></h5> <svg xmlns=\\"http://www.w3.org/2000/svg\\" overflow=\\"auto\\" width=\\"100%\\" height=\\"1200\\">
        <rect fill-opacity=\\"0\\" class=\\"graph-background\\"></rect>
        <defs>
          <marker id=\\"graph-all-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker all-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-other-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker other-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-scope-related-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker scope-related-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-scoped-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker scoped-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-related-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker related-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-direct-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker direct-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-selected-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker selected-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
        </defs>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g>
          <path id=\\"graph-edge-0\\" d=\\"M50,66L50,234\\" marker-end=\\"url(#graph-direct-edge-marker)\\" class=\\"edge direct-edge\\"></path>
        </g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g>
          <circle id=\\"graph-node-1\\" r=\\"16\\" cx=\\"50\\" cy=\\"250\\" title=\\"test-component-id-2, test-span-name-2-2\\" class=\\"node direct-node\\"></circle>
        </g>
        <g>
          <circle id=\\"graph-node-0\\" r=\\"16\\" cx=\\"50\\" cy=\\"50\\" title=\\"test-component-id-1, test-span-name-1-1\\" class=\\"node selected-node\\"></circle>
        </g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g><text x=\\"73\\" y=\\"270\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label direct-node-label\\">
            <tspan x=\\"73\\" y=\\"270\\">
              test-component-id-2
            </tspan>
            <tspan x=\\"73\\" y=\\"286.8\\">
              test-span-name-2-2
            </tspan>
          </text></g>
        <g><text x=\\"73\\" y=\\"70\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label selected-node-label\\">
            <tspan x=\\"73\\" y=\\"70\\">
              test-component-id-1
            </tspan>
            <tspan x=\\"73\\" y=\\"86.8\\">
              test-span-name-1-1
            </tspan>
          </text></g>
      </svg>
    </div>
  </div>
  <div class=\\"nodes\\">
    <h4>Component Nodes</h4> <button type=\\"button\\" class=\\"btn node my-1 btn-success btn-block\\">
      test-span-name-1-1
      <!----></button><button type=\\"button\\" class=\\"btn node my-1 btn-secondary btn-block\\">
      test-span-name-2-2
      <!----></button>
  </div>
</div>"
`;

exports[`ComponentCallGraphsView when there are 2 nodes and the first node has 1 call graph and the second node has 2 call graphs when the second node is clicked changes the selected node to be the second node and shows the call graphs for the second node 1`] = `
"<div callgraphs=\\"\\">
  <transition-stub name=\\"\\" css=\\"true\\" enterclass=\\"\\" leaveclass=\\"show\\" entertoclass=\\"show\\" leavetoclass=\\"\\" enteractiveclass=\\"\\" leaveactiveclass=\\"\\" class=\\"my-3\\">
    <div role=\\"alert\\" aria-live=\\"polite\\" aria-atomic=\\"true\\" class=\\"alert alert-dismissible alert-info\\"><button type=\\"button\\" aria-label=\\"Close\\" class=\\"close\\">×</button>
      <p>
        The call graphs on this page come from a combination of Zipkin traces.
        The visualisation is not out-of-the-box Zipkin functionality and is
        bespoke to Kronicle.
      </p>
      <p class=\\"mb-0\\">
        A maximum of 20 call graphs are displayed on this
        page at any one time.
      </p>
    </div>
  </transition-stub>
  <!---->
  <div class=\\"call-graphs\\">
    <div class=\\"call-graph my-2\\">
      <h5>
        Call Graph 1
        <span class=\\"badge ml-2 badge-primary\\">
          1 Traces
        </span></h5> <svg xmlns=\\"http://www.w3.org/2000/svg\\" overflow=\\"auto\\" width=\\"100%\\" height=\\"1200\\">
        <rect fill-opacity=\\"0\\" class=\\"graph-background\\"></rect>
        <defs>
          <marker id=\\"graph-all-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker all-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-other-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker other-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-scope-related-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker scope-related-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-scoped-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker scoped-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-related-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker related-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-direct-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker direct-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-selected-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker selected-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
        </defs>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g>
          <path id=\\"graph-edge-0\\" d=\\"M50,66L50,234\\" marker-end=\\"url(#graph-direct-edge-marker)\\" class=\\"edge direct-edge\\"></path>
        </g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g>
          <circle id=\\"graph-node-1\\" r=\\"16\\" cx=\\"50\\" cy=\\"250\\" title=\\"test-component-id-2, test-span-name-2-2\\" class=\\"node direct-node\\"></circle>
        </g>
        <g>
          <circle id=\\"graph-node-0\\" r=\\"16\\" cx=\\"50\\" cy=\\"50\\" title=\\"test-component-id-1, test-span-name-2-2\\" class=\\"node selected-node\\"></circle>
        </g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g><text x=\\"73\\" y=\\"270\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label direct-node-label\\">
            <tspan x=\\"73\\" y=\\"270\\">
              test-component-id-2
            </tspan>
            <tspan x=\\"73\\" y=\\"286.8\\">
              test-span-name-2-2
            </tspan>
          </text></g>
        <g><text x=\\"73\\" y=\\"70\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label selected-node-label\\">
            <tspan x=\\"73\\" y=\\"70\\">
              test-component-id-1
            </tspan>
            <tspan x=\\"73\\" y=\\"86.8\\">
              test-span-name-2-2
            </tspan>
          </text></g>
      </svg>
    </div>
    <div class=\\"call-graph my-2\\">
      <h5>
        Call Graph 2
        <span class=\\"badge ml-2 badge-primary\\">
          1 Traces
        </span></h5> <svg xmlns=\\"http://www.w3.org/2000/svg\\" overflow=\\"auto\\" width=\\"100%\\" height=\\"1200\\">
        <rect fill-opacity=\\"0\\" class=\\"graph-background\\"></rect>
        <defs>
          <marker id=\\"graph-all-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker all-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-other-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker other-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-scope-related-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker scope-related-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-scoped-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker scoped-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-related-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker related-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-direct-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker direct-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-selected-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker selected-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
        </defs>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g>
          <path id=\\"graph-edge-0\\" d=\\"M50,66L50,234\\" marker-end=\\"url(#graph-direct-edge-marker)\\" class=\\"edge direct-edge\\"></path>
        </g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g>
          <circle id=\\"graph-node-1\\" r=\\"16\\" cx=\\"50\\" cy=\\"250\\" title=\\"test-component-id-3, test-span-name-3-3\\" class=\\"node direct-node\\"></circle>
        </g>
        <g>
          <circle id=\\"graph-node-0\\" r=\\"16\\" cx=\\"50\\" cy=\\"50\\" title=\\"test-component-id-1, test-span-name-2-2\\" class=\\"node selected-node\\"></circle>
        </g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g><text x=\\"73\\" y=\\"270\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label direct-node-label\\">
            <tspan x=\\"73\\" y=\\"270\\">
              test-component-id-3
            </tspan>
            <tspan x=\\"73\\" y=\\"286.8\\">
              test-span-name-3-3
            </tspan>
          </text></g>
        <g><text x=\\"73\\" y=\\"70\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label selected-node-label\\">
            <tspan x=\\"73\\" y=\\"70\\">
              test-component-id-1
            </tspan>
            <tspan x=\\"73\\" y=\\"86.8\\">
              test-span-name-2-2
            </tspan>
          </text></g>
      </svg>
    </div>
  </div>
  <div class=\\"nodes\\">
    <h4>Component Nodes</h4> <button type=\\"button\\" class=\\"btn node my-1 btn-secondary btn-block\\">
      test-span-name-1-1
      <!----></button><button type=\\"button\\" class=\\"btn node my-1 btn-success btn-block\\">
      test-span-name-2-2
      <!----></button>
  </div>
</div>"
`;

exports[`ComponentCallGraphsView when there is 1 diagram renders the page with 1 call graph on the left and 1 node on the right and the node should be selected 1`] = `
"<div callgraphs=\\"\\">
  <transition-stub name=\\"\\" css=\\"true\\" enterclass=\\"\\" leaveclass=\\"show\\" entertoclass=\\"show\\" leavetoclass=\\"\\" enteractiveclass=\\"\\" leaveactiveclass=\\"\\" class=\\"my-3\\">
    <div role=\\"alert\\" aria-live=\\"polite\\" aria-atomic=\\"true\\" class=\\"alert alert-dismissible alert-info\\"><button type=\\"button\\" aria-label=\\"Close\\" class=\\"close\\">×</button>
      <p>
        The call graphs on this page come from a combination of Zipkin traces.
        The visualisation is not out-of-the-box Zipkin functionality and is
        bespoke to Kronicle.
      </p>
      <p class=\\"mb-0\\">
        A maximum of 20 call graphs are displayed on this
        page at any one time.
      </p>
    </div>
  </transition-stub>
  <!---->
  <div class=\\"call-graphs\\">
    <div class=\\"call-graph my-2\\">
      <h5>
        Call Graph 1
        <span class=\\"badge ml-2 badge-primary\\">
          1 Traces
        </span></h5> <svg xmlns=\\"http://www.w3.org/2000/svg\\" overflow=\\"auto\\" width=\\"100%\\" height=\\"1200\\">
        <rect fill-opacity=\\"0\\" class=\\"graph-background\\"></rect>
        <defs>
          <marker id=\\"graph-all-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker all-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-other-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker other-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-scope-related-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker scope-related-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-scoped-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker scoped-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-related-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker related-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-direct-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker direct-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
          <marker id=\\"graph-selected-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"7.1\\" refY=\\"5.75\\" class=\\"edge-marker selected-edge-marker\\">
            <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
          </marker>
        </defs>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g>
          <path id=\\"graph-edge-0\\" d=\\"M50,66L50,234\\" marker-end=\\"url(#graph-direct-edge-marker)\\" class=\\"edge direct-edge\\"></path>
        </g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g>
          <circle id=\\"graph-node-1\\" r=\\"16\\" cx=\\"50\\" cy=\\"250\\" title=\\"test-component-id-2, test-span-name-2-2\\" class=\\"node direct-node\\"></circle>
        </g>
        <g>
          <circle id=\\"graph-node-0\\" r=\\"16\\" cx=\\"50\\" cy=\\"50\\" title=\\"test-component-id-1, test-span-name-1-1\\" class=\\"node selected-node\\"></circle>
        </g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g></g>
        <g><text x=\\"73\\" y=\\"270\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label direct-node-label\\">
            <tspan x=\\"73\\" y=\\"270\\">
              test-component-id-2
            </tspan>
            <tspan x=\\"73\\" y=\\"286.8\\">
              test-span-name-2-2
            </tspan>
          </text></g>
        <g><text x=\\"73\\" y=\\"70\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label selected-node-label\\">
            <tspan x=\\"73\\" y=\\"70\\">
              test-component-id-1
            </tspan>
            <tspan x=\\"73\\" y=\\"86.8\\">
              test-span-name-1-1
            </tspan>
          </text></g>
      </svg>
    </div>
  </div>
  <div class=\\"nodes\\">
    <h4>Component Nodes</h4> <button type=\\"button\\" class=\\"btn node my-1 btn-success btn-block\\">
      test-span-name-1-1
      <!----></button>
  </div>
</div>"
`;
